connected with front-end

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,15 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>URL Shortener by Tushar</h1>
+    <h1>Chotu URL</h1>
+    <form>
+      <label for="url">URL</label>
+      <input name="url" id="url" type="alias" />
+      <label for="alias">Short Name</label>
+      <input name="alias" id="alias" type="text" />
+      <input type="submit" value="Chotufy" />
+    </form>
+    <div id="message"></div>
+    <script src="./app.js"></script>
   </body>
 </html>
