--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,8 @@
       <input type="submit" value="Chotufy" />
     </form>
     <div id="message"></div>
+
+    <script src="https://unpkg.com/clipboard@2/dist/clipboard.min.js"></script>
     <script src="./app.js"></script>
   </body>
 </html>
