--- a/public/index.html
+++ b/public/index.html
@@ -34,9 +34,8 @@
       </div>
       <input type="submit" value="Chotufy" />
     </form>
-    <div id="message"></div>
+    <textarea disabled id="message"></textarea>
 
-    <script src="https://unpkg.com/clipboard@2/dist/clipboard.min.js"></script>
     <script src="./app.js"></script>
   </body>
 </html>
