--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,10 @@
       </div>
       <input type="submit" value="Chotufy" />
     </form>
-    <textarea disabled id="message"></textarea>
+    <div id="message">
+      <p>Click to copy</p>
+      <textarea disabled id="message-textarea"></textarea>
+    </div>
 
     <script src="./app.js"></script>
   </body>
